objects/Room__c.object
<CustomObject>
    <fields>
        <fullName>Hotal__c</fullName>
        <label>Hotal</label>
        <referenceTo>Hotal__c</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Occupancy__c</fullName>
        <label>Occupancy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tariff__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Tariff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Room</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RM-{000}</displayFormat>
        <label>Room Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <recordTypes>
        <fullName>Duplex</fullName>
        <active>true</active>
        <label>Duplex</label>
    </recordTypes>
    <recordTypes>
        <fullName>Super</fullName>
        <active>true</active>
        <label>Super</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>